프로젝트 구조 개선 및 코드 정리 - mysql 문자열 정렬규칙 변경 : utf8mb4_general_ci -> utf8mb4_unicode_ci - mysql 초기화시 테이블 생성 스크립트 추가 - node app.js의 실행 경로 변경 : /app ->  /app/src - docker-compose 네트워크 이름을 지정하여 구분함.

--- a/docker/app/Dockerfile
+++ b/docker/app/Dockerfile
@@ -6,8 +6,9 @@ COPY ./src/package*.json ./
 
 RUN npm install -g npm@10.9.0 && npm install
 RUN npm install axios
+RUN npm install express
 
-COPY ./src /app/
+COPY ./src /app/src
 
 ENV NODE_PATH=/app/node_modules
 
