--- a/src/package.json
+++ b/src/package.json
@@ -1,9 +1,9 @@
 {
     "name": "cert-management-system",
     "version": "1.0.0",
-    "main": "app.js",
+    "main": "/app/src/app.js",
     "scripts": {
-        "start": "node app.js"
+        "start": "node /app/src/app.js"
     },
     "dependencies": {
         "express": "^4.17.1",
