--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,9 +32,9 @@ jobs:
         with:
           files: mapae-${{ env.RELEASE_NAME }}.zip
           tag_name: ${{ env.RELEASE_NAME }}
-          release_name: Release ${{ env.RELEASE_NAME }}
+          name: Release ${{ env.RELEASE_NAME }}
           body: "자동 배포된 릴리즈"
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
 
 
