--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,4 +1,4 @@
-name: Build and Release
+name: Build and Upload to Google Drive
 
 on:
   push:
@@ -21,13 +21,7 @@ jobs:
         run: |
           zip -r mapae-${{ env.RELEASE_NAME }}.zip . -x "*.git*"
 
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: mapae-${{ env.RELEASE_NAME }}.zip
-          path: mapae-${{ env.RELEASE_NAME }}.zip
-
-      - name: Create GitHub Release
+      - name: Upload artifact to GitHub Release
         uses: softprops/action-gh-release@v1
         with:
           files: mapae-${{ env.RELEASE_NAME }}.zip
@@ -35,6 +29,24 @@ jobs:
           name: Release ${{ env.RELEASE_NAME }}
           body: "자동 배포된 릴리즈"
         env:
-          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+  upload-to-drive:
+    needs: build
+    runs-on: ubuntu-latest
 
+    steps:
+      - name: Download Release Asset
+        uses: dsaltares/fetch-gh-release-asset@v1
+        with:
+          repo: ${{ github.repository }}
+          version: "tags/${{ github.ref_name }}"
+          file: "mapae-${{ github.ref_name }}.zip"
+          token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Upload to Google Drive
+        uses: robinraju/gdrive-action@v0.3
+        with:
+          service_account_key: ${{ secrets.GDRIVE_JSON_KEY }}
+          folder_id: "YOUR_GOOGLE_DRIVE_FOLDER_ID"
+          file: "mapae-${{ github.ref_name }}.zip"
