--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,7 +29,7 @@ jobs:
           name: Release ${{ env.RELEASE_NAME }}
           body: "자동 배포된 릴리즈"
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
 
   upload-to-drive:
     needs: build
@@ -42,7 +42,7 @@ jobs:
           repo: ${{ github.repository }}
           version: "tags/${{ github.ref_name }}"
           file: "mapae-${{ github.ref_name }}.zip"
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.GH_PAT }}
 
       - name: Upload to Google Drive
         uses: robinraju/gdrive-action@v0.3
