--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,7 +37,7 @@ jobs:
 
     steps:
       - name: Download Release Asset
-        uses: dsaltares/fetch-gh-release-asset@v1
+        uses: dsaltares/fetch-gh-release-asset@v2
         with:
           repo: ${{ github.repository }}
           version: "tags/${{ github.ref_name }}"
@@ -45,8 +45,8 @@ jobs:
           token: ${{ secrets.GH_PAT }}
 
       - name: Upload to Google Drive
-        uses: robinraju/gdrive-action@v0.3
+        uses: robinraju/gdrive-action@v1
         with:
           service_account_key: ${{ secrets.GDRIVE_JSON_KEY }}
-          folder_id: "YOUR_GOOGLE_DRIVE_FOLDER_ID"
+          folder_id: ${{ secrets.GOOGLE_DRIVE_FOLDER_ID }}
           file: "mapae-${{ github.ref_name }}.zip"
