--- a/.github/workflows/upload-to-drive.yml
+++ b/.github/workflows/upload-to-drive.yml
@@ -12,40 +12,48 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
+        - name: Checkout Repository
+          uses: actions/checkout@v4
 
-      - name: Install dependencies
-        run: |
-          sudo apt update
-          sudo apt install -y jq wget
+        - name: Install dependencies
+          run: |
+            sudo apt update
+            sudo apt install -y jq wget
 
-      - name: Get Latest Release Asset ID
-        run: |
-          ASSET_ID=$(curl -s -H "Authorization: token ${{ secrets.GH_PAT }}" \
-              "https://api.github.com/repos/${{ github.repository }}/releases/latest" | \
-              jq -r '.assets[] | select(.name | endswith(".zip")) | .id')
-          echo "ASSET_ID=$ASSET_ID" >> $GITHUB_ENV
+        - name: Get Latest Release Asset ID
+          run: |
+            ASSET_ID=$(curl -s -H "Authorization: token ${{ secrets.GH_PAT }}" \
+                "https://api.github.com/repos/${{ github.repository }}/releases/latest" | \
+                jq -r '.assets[] | select(.name | endswith(".zip")) | .id')
+            echo "ASSET_ID=$ASSET_ID" >> $GITHUB_ENV
 
-      - name: Download Release Asset
-        run: |
-          curl -L -o mapae-${{ github.ref_name }}.zip \
-               -H "Authorization: token ${{ secrets.GH_PAT }}" \
-               -H "Accept: application/octet-stream" \
-               "https://api.github.com/repos/${{ github.repository }}/releases/assets/${{ env.ASSET_ID }}"
+        - name: Download Release Asset
+          run: |
+            curl -L -o mapae-${{ github.ref_name }}.zip \
+                -H "Authorization: token ${{ secrets.GH_PAT }}" \
+                -H "Accept: application/octet-stream" \
+                "https://api.github.com/repos/${{ github.repository }}/releases/assets/${{ env.ASSET_ID }}"
 
-      - name: Install gdrive CLI
-        run: |
-          wget -O gdrive.tar.gz https://github.com/glotlabs/gdrive/releases/download/3.9.1/gdrive_linux-x64.tar.gz
-          tar -xzf gdrive.tar.gz
-          chmod +x gdrive
-          sudo mv gdrive /usr/local/bin/
+        - name: Install gdrive CLI
+          run: |
+            wget -O gdrive.tar.gz https://github.com/glotlabs/gdrive/releases/download/3.9.1/gdrive_linux-x64.tar.gz
+            tar -xzf gdrive.tar.gz
+            chmod +x gdrive
+            sudo mv gdrive /usr/local/bin/
 
-      - name: Authenticate Google Drive
-        run: |
-          echo '${{ secrets.GDRIVE_JSON_KEY }}' > service-account.json
-          gdrive --service-account service-account.json about
-
-      - name: Upload to Google Drive
-        run: |
-          gdrive --service-account service-account.json upload --parent ${{ secrets.GOOGLE_DRIVE_FOLDER_ID }} mapae-${{ github.ref_name }}.zip
+        - name: Restore Google Drive Account (if exists)
+          run: |
+            if [ -n "${{ secrets.GDRIVE_JSON_KEY }}" ]; then
+                echo "${{ secrets.GDRIVE_JSON_KEY }}" | base64 --decode > gdrive_account.tar.gz
+                gdrive account import gdrive_account.tar.gz
+                echo "Google Drive account restored!"
+            else
+                echo "No Google Drive account found, proceeding with new authentication."
+                gdrive account add
+                gdrive account export gdrive_account.tar.gz
+                echo "Uploading Google Drive account archive to Secrets (Manual step required)"
+            fi
+  
+        - name: Upload to Google Drive
+          run: |
+            gdrive upload --parent ${{ secrets.GOOGLE_DRIVE_FOLDER_ID }} mapae-${{ github.ref_name }}.zip
